<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:layout_margin="24dp"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_in_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="80dp"
                app:errorEnabled="true"
                android:hint="@string/email_hint"
                android:textColorHint="@color/colorAccent"
                app:errorTextAppearance="@style/InputLayoutErrorText"
                app:hintTextAppearance="@style/InputLayoutHintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_email_et"
                    style="@style/AuthInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_in_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_below="@+id/sign_in_email_input_layout"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                android:hint="@string/password_hint"
                android:textColorHint="@color/colorAccent"
                app:errorTextAppearance="@style/InputLayoutErrorText"
                app:hintTextAppearance="@style/InputLayoutHintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_password_et"
                    style="@style/AuthInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sign_in_password_input_layout"
                android:orientation="horizontal">

                <TextView
                    style="@style/AuthInputTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/new_user"/>

                <TextView
                    style="@style/AuthInputSelectableTextView"
                    android:id="@+id/sign_in_register"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/sign_in_register"/>
            </LinearLayout>
        </RelativeLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/AuthButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="3dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:text="@string/sign_in_label" />
</RelativeLayout>