<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryLight"/>

            <ImageButton
                android:id="@+id/sign_up_back_btn"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/arrow_back"
                android:cropToPadding="true"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"/>


            <TextView
                android:id="@+id/textView"
                style="@style/ToolbarTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:text="@string/sign_up_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryLight"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            android:hint="@string/email_hint"
            android:textColorHint="@color/colorAccent"
            app:errorTextAppearance="@style/InputLayoutErrorText"
            app:hintTextAppearance="@style/InputLayoutHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sign_up_email_et"
                style="@style/AuthInputEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:errorEnabled="true"
            android:layout_below="@+id/sign_up_email_input_layout"
            android:hint="@string/password_hint"
            android:textColorHint="@color/colorAccent"
            app:errorTextAppearance="@style/InputLayoutErrorText"
            app:hintTextAppearance="@style/InputLayoutHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sign_up_password_et"
                style="@style/AuthInputEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/sign_up_button"
            style="@style/AuthButton"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:elevation="3dp"
            android:layout_marginStart="24dp"
            android:text="@string/sign_up_label" />

    </RelativeLayout>

</LinearLayout>